<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <TextView
        android:id="@+id/tv_titulo"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calcular_autonomia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_km_percorrido"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        android:layout_margin="16dp"
        android:ems="10"
        android:maxLength="10"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_precokwh"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        android:layout_margin="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        android:layout_marginTop="4dp" />
    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/calcular"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/et_preco_kwh"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/et_preco_kwh"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        tools:text="1.0"/>




</androidx.constraintlayout.widget.ConstraintLayout>